--- a/web_app/templates/reviewform.html
+++ b/web_app/templates/reviewform.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <title>Inspect Engine</title>
-        <link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
-        <link href="http://getbootstrap.com/examples/jumbotron-narrow/jumbotron-narrow.css" rel="stylesheet">
+        <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+		
     </head>
     <body>
         
